--- a/ceiling.html
+++ b/ceiling.html
@@ -282,6 +282,24 @@
                                   fill="#ffffff" opacity="1" data-original="#000000"></path>
                               </g>
                             </svg></i></div>
+                        <div class="maximenuck_box">
+                          <a href="#" class="maximenuck_box_item">Стены (перегородки) </a>
+                          <a href="#" class="maximenuck_box_item">Плитка </a>
+                          <a href="#" class="maximenuck_box_item">Штукатурка (шпаклевка) </a>
+                          <a href="#" class="maximenuck_box_item">Обои</a>
+                          <a href="#" class="maximenuck_box_item">Краска </a>
+                          <a href="#" class="maximenuck_box_item">Полы (стяжка) </a>
+                          <a href="#" class="maximenuck_box_item">Паркет (ламинат) </a>
+                          <a href="#" class="maximenuck_box_item">Ковролин </a>
+                          <a href="#" class="maximenuck_box_item">Линолиум </a>
+                          <a href="#" class="maximenuck_box_item">Потолок </a>
+                          <a href="#" class="maximenuck_box_item">Окна</a>
+                          <a href="#" class="maximenuck_box_item">Двери</a>
+                          <a href="#" class="maximenuck_box_item">Сантехника </a>
+                          <a href="#" class="maximenuck_box_item">Електрика</a>
+                          <a href="#" class="maximenuck_box_item">Оборудование </a>
+                          <a href="#" class="maximenuck_box_item">Мебель </a>
+                        </div>
                       </li>
                       <li data-level="1" class="maximenuck level1">
                         <div class="maximenuck maximenuck_item"><span class="titreck">Снос домов</span><i><svg
@@ -294,6 +312,15 @@
                                   fill="#ffffff" opacity="1" data-original="#000000"></path>
                               </g>
                             </svg></i></div>
+                        <div class="maximenuck_box">
+                          <a href="#" class="maximenuck_box_item">Дома </a>
+                          <a href="#" class="maximenuck_box_item">Баня </a>
+                          <a href="#" class="maximenuck_box_item">Сарай (хоз постройка) </a>
+                          <a href="#" class="maximenuck_box_item">Кровля </a>
+                          <a href="#" class="maximenuck_box_item">Фундамент </a>
+                          <a href="#" class="maximenuck_box_item">Заборы </a>
+                          <a href="#" class="maximenuck_box_item">Металло-ция </a>
+                        </div>
                       </li>
                       <li data-level="1" class="maximenuck level1 ">
                         <div class="maximenuck maximenuck_item"><span class="titreck">Алмазная резка</span><i><svg
@@ -306,6 +333,10 @@
                                   fill="#ffffff" opacity="1" data-original="#000000"></path>
                               </g>
                             </svg></i></div>
+                        <div class="maximenuck_box">
+                          <a href="#" class="maximenuck_box_item">Алмазная резка </a>
+                          <a href="#" class="maximenuck_box_item">Усиление </a>
+                        </div>
                       </li>
                       <li data-level="1" class="maximenuck  level1 "><a class="maximenuck "
                           href="/steny-pol-potolok.html"><span class="titreck">Алмазное бурение</span></a>
@@ -324,6 +355,11 @@
                                   fill="#ffffff" opacity="1" data-original="#000000"></path>
                               </g>
                             </svg></i></div>
+                        <div class="maximenuck_box">
+                          <a href="#" class="maximenuck_box_item">НАШ АВТОПАРК </a>
+                          <a href="#" class="maximenuck_box_item">ФАСОВКА МУСОРА </a>
+                          <a href="#" class="maximenuck_box_item">СПУСК и ПОГРУЗКА МУСОРА </a>
+                        </div>
                       </li>
                       <li data-level="1" class="maximenuck  level1">
                         <div class="maximenuck maximenuck_item"><span class="titreck">Наши работы</span><i><svg
