--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
   </div>
 
 
+  
   <header>
-
     <div class="k-one">
       <div class="container">
         <div class="col-md-9 col-sm-12 col-xs-12">
@@ -291,8 +291,8 @@
                   <div class="maxiroundedleft"></div>
                   <div class="maxiroundedcenter">
                     <ul class="mdfloat maximenuck">
-                      <li data-level="1" class="maximenuck first level1 "><a class="maximenuck"
-                          href="/okna-dveri-santehnika.html"><span class="titreck">Демонтажные услуги</span><i><svg
+                      <li data-level="1" class="maximenuck first level1 ">
+                        <div class="maximenuck maximenuck_item"><span class="titreck">Демонтажные услуги</span><i><svg
                               xmlns="http://www.w3.org/2000/svg" version="1.1"
                               xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" x="0" y="0"
                               viewBox="0 0 128 128" style="enable-background:new 0 0 512 512" xml:space="preserve">
@@ -301,10 +301,28 @@
                                   d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
                                   fill="#ffffff" opacity="1" data-original="#000000"></path>
                               </g>
-                            </svg></i></a>
+                            </svg></i></div>
+                        <div class="maximenuck_box">
+                          <a href="#" class="maximenuck_box_item">Стены (перегородки) </a>
+                          <a href="#" class="maximenuck_box_item">Плитка </a>
+                          <a href="#" class="maximenuck_box_item">Штукатурка (шпаклевка) </a>
+                          <a href="#" class="maximenuck_box_item">Обои</a>
+                          <a href="#" class="maximenuck_box_item">Краска </a>
+                          <a href="#" class="maximenuck_box_item">Полы (стяжка) </a>
+                          <a href="#" class="maximenuck_box_item">Паркет (ламинат) </a>
+                          <a href="#" class="maximenuck_box_item">Ковролин </a>
+                          <a href="#" class="maximenuck_box_item">Линолиум </a>
+                          <a href="#" class="maximenuck_box_item">Потолок </a>
+                          <a href="#" class="maximenuck_box_item">Окна</a>
+                          <a href="#" class="maximenuck_box_item">Двери</a>
+                          <a href="#" class="maximenuck_box_item">Сантехника </a>
+                          <a href="#" class="maximenuck_box_item">Електрика</a>
+                          <a href="#" class="maximenuck_box_item">Оборудование </a>
+                          <a href="#" class="maximenuck_box_item">Мебель </a>
+                        </div>
                       </li>
-                      <li data-level="1" class="maximenuck level1 "><a class="maximenuck "
-                          href="/okna-dveri-santehnika.html#tab2"><span class="titreck">Снос домов</span><i><svg
+                      <li data-level="1" class="maximenuck level1">
+                        <div class="maximenuck maximenuck_item"><span class="titreck">Снос домов</span><i><svg
                               xmlns="http://www.w3.org/2000/svg" version="1.1"
                               xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" x="0" y="0"
                               viewBox="0 0 128 128" style="enable-background:new 0 0 512 512" xml:space="preserve">
@@ -313,10 +331,19 @@
                                   d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
                                   fill="#ffffff" opacity="1" data-original="#000000"></path>
                               </g>
-                            </svg></i></a>
+                            </svg></i></div>
+                        <div class="maximenuck_box">
+                          <a href="#" class="maximenuck_box_item">Дома </a>
+                          <a href="#" class="maximenuck_box_item">Баня </a>
+                          <a href="#" class="maximenuck_box_item">Сарай (хоз постройка) </a>
+                          <a href="#" class="maximenuck_box_item">Кровля </a>
+                          <a href="#" class="maximenuck_box_item">Фундамент </a>
+                          <a href="#" class="maximenuck_box_item">Заборы </a>
+                          <a href="#" class="maximenuck_box_item">Металло-ция </a>
+                        </div>
                       </li>
-                      <li data-level="1" class="maximenuck level1 "><a class="maximenuck "
-                          href="/okna-dveri-santehnika.html#tab3"><span class="titreck">Алмазная резка</span><i><svg
+                      <li data-level="1" class="maximenuck level1 ">
+                        <div class="maximenuck maximenuck_item"><span class="titreck">Алмазная резка</span><i><svg
                               xmlns="http://www.w3.org/2000/svg" version="1.1"
                               xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" x="0" y="0"
                               viewBox="0 0 128 128" style="enable-background:new 0 0 512 512" xml:space="preserve">
@@ -325,7 +352,11 @@
                                   d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
                                   fill="#ffffff" opacity="1" data-original="#000000"></path>
                               </g>
-                            </svg></i></a>
+                            </svg></i></div>
+                        <div class="maximenuck_box">
+                          <a href="#" class="maximenuck_box_item">Алмазная резка </a>
+                          <a href="#" class="maximenuck_box_item">Усиление </a>
+                        </div>
                       </li>
                       <li data-level="1" class="maximenuck  level1 "><a class="maximenuck "
                           href="/steny-pol-potolok.html"><span class="titreck">Алмазное бурение</span></a>
@@ -333,8 +364,8 @@
                       <li data-level="1" class="maximenuck  level1"><a class="maximenuck "
                           href="/steny-pol-potolok.html#tab2"><span class="titreck">Перепланировка</span></a>
                       </li>
-                      <li data-level="1" class="maximenuck  level1"><a class="maximenuck "
-                          href="/steny-pol-potolok.html#tab3"><span class="titreck">Вывоз мусора</span><i><svg
+                      <li data-level="1" class="maximenuck  level1">
+                        <div class="maximenuck maximenuck_item"><span class="titreck">Вывоз мусора</span><i><svg
                               xmlns="http://www.w3.org/2000/svg" version="1.1"
                               xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" x="0" y="0"
                               viewBox="0 0 128 128" style="enable-background:new 0 0 512 512" xml:space="preserve">
@@ -343,10 +374,16 @@
                                   d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
                                   fill="#ffffff" opacity="1" data-original="#000000"></path>
                               </g>
-                            </svg></i></a>
+                            </svg></i></div>
+                        <div class="maximenuck_box">
+                          <a href="#" class="maximenuck_box_item">НАШ АВТОПАРК </a>
+                          <a href="#" class="maximenuck_box_item">ФАСОВКА МУСОРА </a>
+                          <a href="#" class="maximenuck_box_item">СПУСК и ПОГРУЗКА МУСОРА </a>
+                        </div>
                       </li>
-                      <li data-level="1" class="maximenuck  level1"><a class="maximenuck" href="/doma.html"><span
-                            class="titreck">Наши работы</span><i><svg xmlns="http://www.w3.org/2000/svg" version="1.1"
+                      <li data-level="1" class="maximenuck  level1">
+                        <div class="maximenuck maximenuck_item"><span class="titreck">Наши работы</span><i><svg
+                              xmlns="http://www.w3.org/2000/svg" version="1.1"
                               xmlns:xlink="http://www.w3.org/1999/xlink" width="24" height="24" x="0" y="0"
                               viewBox="0 0 128 128" style="enable-background:new 0 0 512 512" xml:space="preserve">
                               <g>
@@ -354,7 +391,13 @@
                                   d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
                                   fill="#ffffff" opacity="1" data-original="#000000"></path>
                               </g>
-                            </svg></i></a>
+                            </svg></i></div>
+                        <div class="maximenuck_box">
+                          <a href="#" class="maximenuck_box_item">Фото</a>
+                          <a href="#" class="maximenuck_box_item">Видео </a>
+                          <a href="#" class="maximenuck_box_item">Отзывы </a>
+                          <a href="#" class="maximenuck_box_item">Контакты </a>
+                        </div>
                       </li>
                     </ul>
                   </div>
@@ -368,7 +411,6 @@
       </div>
     </div>
   </header>
-
   <div class="clearfix"></div>
 
   <div class="block-one">
