--- a/ceiling.html
+++ b/ceiling.html
@@ -9,7 +9,7 @@
   <meta name="robots" content="index,follow">
   <meta name="description"
     content="Если вам необходимо провести демонтаж, обратитесь в компанию “ПИТЕР ДЕМОНТАЖ”. Быстро, аккуратно и недорого. Звонок менеджеру по телефону: +7 (812) 6-29-29-99.">
-  <title>Услуги демонтажа в СПБ по доступной стоимости: квартиры, офисы, гаражи и другое</title>
+  <title>Демонтажные услуги по доступной стоимости: квартиры, офисы, магазины. Снос домов. Вывоз мусора.</title>
   <link href="favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -32,56 +32,92 @@
     </div>
     <div class="mobilemaximenuckitemwrap" style="position: absolute; width: 100%;">
       <div class="mobilemaximenuckitem">
-        <div class="maximenuck item148 first level1 "><a href="/okna-dveri-santehnika.html" class="maximenuck "><span
-              class="mobiletextck">Окна</span></a></div>
+        <div class="maximenuck level1">
+          <div class="maximenuck_item_mobile">
+            <span class="mobiletextck">Демонтажные работы</span>
+            <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
+                xml:space="preserve">
+                <g>
+                  <path
+                    d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
+                    fill="#222" opacity="1" data-original="#000000"></path>
+                </g>
+              </svg></i>
+          </div>
+        </div>
       </div>
       <div class="mobilemaximenuckitem">
-        <div class="maximenuck item878 level1 "><a href="/okna-dveri-santehnika.html#tab2" class="maximenuck "><span
-              class="mobiletextck">Двери</span></a></div>
+        <div class="maximenuck  level1">
+          <div class="maximenuck_item_mobile">
+            <span class="mobiletextck">Снос домов</span>
+            <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
+                xml:space="preserve">
+                <g>
+                  <path
+                    d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
+                    fill="#222" opacity="1" data-original="#000000"></path>
+                </g>
+              </svg></i>
+          </div>
+        </div>
       </div>
       <div class="mobilemaximenuckitem">
-        <div class="maximenuck item1032 level1 "><a href="/okna-dveri-santehnika.html#tab3" class="maximenuck "><span
-              class="mobiletextck">Сантехника</span></a></div>
+        <div class="maximenuck  level1">
+          <div class="maximenuck_item_mobile">
+            <span class="mobiletextck">Алмазная резка</span>
+            <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
+                xml:space="preserve">
+                <g>
+                  <path
+                    d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
+                    fill="#222" opacity="1" data-original="#000000"></path>
+                </g>
+              </svg></i>
+          </div>
+        </div>
       </div>
       <div class="mobilemaximenuckitem">
-        <div class="maximenuck item1085 level1 "><a href="/steny-pol-potolok.html" class="maximenuck "><span
-              class="mobiletextck">Стены</span></a></div>
+        <div class="maximenuck  level1 "><a href="/steny-pol-potolok.html" class="maximenuck "><span
+              class="mobiletextck">Алмазное бурение</span></a></div>
       </div>
       <div class="mobilemaximenuckitem">
-        <div class="maximenuck item1086 level1 "><a href="/steny-pol-potolok.html#tab2" class="maximenuck "><span
-              class="mobiletextck">Пол</span></a></div>
-      </div>
-      <div class="mobilemaximenuckitem">
-        <div class="maximenuck item1087 level1 "><a href="/steny-pol-potolok.html#tab3" class="maximenuck "><span
-              class="mobiletextck">Потолок</span></a></div>
-      </div>
-      <div class="mobilemaximenuckitem">
-        <div class="maximenuck item1031 level1 "><a href="/doma.html" class="maximenuck "><span
-              class="mobiletextck">Кровля</span></a></div>
-      </div>
-      <div class="mobilemaximenuckitem">
-        <div class="maximenuck item839 level1 "><a href="/doma.html#tab2" class="maximenuck "><span
-              class="mobiletextck">Снос домов</span></a></div>
-      </div>
-      <div class="mobilemaximenuckitem">
-        <div class="maximenuck item792 level1 "><a href="/doma.html#tab3" class="maximenuck "><span
-              class="mobiletextck">Металлоконструкция</span></a></div>
-      </div>
-      <div class="mobilemaximenuckitem">
-        <div class="maximenuck item1029 level1 "><a href="/pereplanirovka.html" class="maximenuck "><span
+        <div class="maximenuck  level1 "><a href="/steny-pol-potolok.html#tab2" class="maximenuck "><span
               class="mobiletextck">Перепланировка</span></a></div>
       </div>
       <div class="mobilemaximenuckitem">
-        <div class="maximenuck item1077 level1 "><a href="/almaznaya-rezka.html" class="maximenuck "><span
-              class="mobiletextck">Алмазная резка</span></a></div>
+        <div class="maximenuck  level1">
+          <div class="maximenuck_item_mobile">
+            <span class="mobiletextck">Вывоз мусора</span>
+            <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
+                xml:space="preserve">
+                <g>
+                  <path
+                    d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
+                    fill="#222" opacity="1" data-original="#000000"></path>
+                </g>
+              </svg></i>
+          </div>
+        </div>
       </div>
       <div class="mobilemaximenuckitem">
-        <div class="maximenuck item1078 level1 "><a href="/vyvoz-musora.html" class="maximenuck "><span
-              class="mobiletextck">Вывоз мусора</span></a></div>
-      </div>
-      <div class="mobilemaximenuckitem">
-        <div class="maximenuck item150 last level1 "><a href="/contacts.html" class="maximenuck "><span
-              class="mobiletextck">Контакты</span></a></div>
+        <div class="maximenuck  level1">
+          <div class="maximenuck_item_mobile">
+            <span class="mobiletextck">Наши работы</span>
+            <i><svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="24" height="24" x="0" y="0" viewBox="0 0 128 128" style="enable-background:new 0 0 512 512"
+                xml:space="preserve">
+                <g>
+                  <path
+                    d="M64 88a3.988 3.988 0 0 1-2.828-1.172l-40-40c-1.563-1.563-1.563-4.094 0-5.656s4.094-1.563 5.656 0L64 78.344l37.172-37.172c1.563-1.563 4.094-1.563 5.656 0s1.563 4.094 0 5.656l-40 40A3.988 3.988 0 0 1 64 88z"
+                    fill="#222" opacity="1" data-original="#000000"></path>
+                </g>
+              </svg></i>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -211,7 +247,7 @@
             <div class="custom top03">
               <div>Режим работы с 9.00 до 21.00</div>
               <div class="trigger_header">
-                Нам доверяют. Нас рекомендуют.
+                Нам доверяют. Нас&nbsp;рекомендуют.
               </div>
             </div>
           </div>
@@ -356,9 +392,9 @@
                               </g>
                             </svg></i></div>
                         <div class="maximenuck_box">
-                          <a href="#" class="maximenuck_box_item">НАШ АВТОПАРК </a>
-                          <a href="#" class="maximenuck_box_item">ФАСОВКА МУСОРА </a>
-                          <a href="#" class="maximenuck_box_item">СПУСК и ПОГРУЗКА МУСОРА </a>
+                          <a href="#" class="maximenuck_box_item">Наш автопарк </a>
+                          <a href="#" class="maximenuck_box_item">Фасовка мусора </a>
+                          <a href="#" class="maximenuck_box_item">Спуск и погрузка мусора </a>
                         </div>
                       </li>
                       <li data-level="1" class="maximenuck  level1">
@@ -2234,6 +2270,8 @@
         jQuery(this).fadeOut();
       });
     });
+
+   
   </script>
 
 
