--- a/ceiling.html
+++ b/ceiling.html
@@ -2122,6 +2122,62 @@
     </div>
   </section>
 
+  <section>
+    <div class="container">
+      <h2>Демонтаж потолка</h2>
+      <p>Большинство людей задаются вопросом: «Что такое <strong>демонтаж потолка</strong>?». Сейчас вы узнаете о том,
+        что же подразумевается под этой фразой. Как наша компания выполняет работу, <strong>расценки на
+          демонтаж</strong>.</p>
+      <p>Утилизация включает в себя следующее:</p>
+      <p>→ разбор платиковых панелей; <br>→ ликвидация вагонки; <br>→ разбор реечного, <strong>демонтаж двухуровневого
+          потолка</strong>, состоящего из <strong>ГКЛ</strong>; <br>→ зачистка плит от штукатурки и другого материала;
+        <br>→ <strong>частичная утилизация натяжных</strong> потолков; <br>→ увеличение стыков, между потолочными
+        плитами.
+      </p>
+      <p>Иными словами, демонтажные действия имеют широкое понятие, и включают в себя достаточно много различных работ.
+        Если у вас возникнет вопрос, ответ на который вы не найдете в данной статье, то можете обратиться к менеджеру
+        компании. Он ответит на все интересующие вас вопросы по <strong>демонтажу натяжного потолка</strong> и не
+        только.</p>
+      <p>Утилизация, сложная работа в этой отрасли, однако вы можете не беспокоиться. У нас работают мастера, которые
+        выполнят утилизацию на высшем уровне и за короткий промежуток времени. Никто не любит затяжные ремонты, ведь они
+        отнимают столько сил и времени, которое можно потратить на более полезные дела.</p>
+      <h5>Разновидность поверхностей для демонтажа</h5>
+      <p>Потолочных покрытий огромное изобилие.</p>
+      <p>Популярные из них:</p>
+      <p>→ Традиционный – потолок полностью отштукатурен. <br>→ Классический – отделка гипсокартонными листами. <br>→
+        Натяжной – использование разных тканей. <br>→ Самыми редкими являются деревянные и выполненные из панели
+        потолки.</p>
+      <p>Начать <strong>демонтаж</strong> стоит с удаления штукатурки. Это может быть частичное или полное удаление, все
+        зависит от состояния поверхности. Если штукатурка будет сваливаться вместе с краской, то придется удалять её
+        всю. Если же потолок находится в хорошем состоянии, но имеются несколько сколов и трещин, то допускается
+        <strong>частичное</strong> удаление.
+      </p>
+      <p>Чтобы удалить краску, которая была разбавлена водой, необходимо воспользоваться специальным шпателем, который
+        выполнен из стали. С его помощью мы снимаем старую краску. Если же ваш потолок покрыт известняковой побелкой, то
+        смываем её обычной водой.</p>
+      <p>Следующий этап заключается в <strong>демонтаже</strong> плитки и плинтусов с потолка. Начинать удаление нужно
+        всегда с угла комнаты, при этом используя специальные инструменты: молоток, шпатель и перфоратор. Если на
+        потолке остался клей, то его хорошо смачиваем водой и удаляем при помощи шпателя. В случае, когда сложно убрать
+        наросты обычным шпателем, используем специальную шлифовальную машинку с определенной насадкой для наростов.</p>
+      <p>Перед тем, как начать разбирать подвесной потолок, необходимо избавиться от основного покрытия, которое сначала
+        снимается возле стены. Действие проводится очень аккуратно, чтобы не повредить потолочное покрытие и имеющиеся
+        декоративные вставки.</p>
+      <p>После снятия основного покрытия, можно приступать к разборке каркаса. Такая работа требует от мастера
+        внимательности, осторожности, <strong>расценки</strong>, поэтому высокие. Если у вас <strong>натяжные
+          потолки</strong> из ПВХ материала, то удаление нужно начинать при температуре не меньше 60 градусов.
+        <strong>Разборка</strong> такого вида поверхности, производится с помощью специальной тепловой пушки.
+        Обязательно нужно соблюдать тепловой режим, иначе низкая температура повредит материал и снизит срок
+        эксплуатации. Тканевые <strong>натяжные потолки</strong> гораздо удобнее и просты в <strong>демонтаже</strong>.
+      </p>
+      <p>Мастера демонтируют абсолютно все виды потолочных покрытий. В демонтаже используется специальное
+        высокотехнологичное оборудование, которое качественно справляется со своей работой.</p>
+      <p><a class="link-box link-pdf" href="./images/Прайс-лист%20на%20услуги%20по%20демонтажу.pdf" target="_blank"
+          data-fancybox-type="iframe">Прайс-лист на демонтажные услуги. </a></p>
+      <a class="link-box link-pdf present" href="./images/Прайс-лист%20на%20услуги%20по%20демонтажу.pdf" target="_blank"
+        data-fancybox-type="iframe">Подарочный сертификат </a>
+    </div>
+  </section>
+
 
   <div class="footer">
     <div class="container">
@@ -2271,7 +2327,7 @@
       });
     });
 
-   
+
   </script>
 
 
