--- a/redevelopment.html
+++ b/redevelopment.html
@@ -233,7 +233,7 @@
         <div class="row">
           <div class="col-md-1 col-sm-12 col-xs-12 sv1">
             <div class="custom_logo">
-              <div><a title="На главную" href="/"><img src="images/logo.png" alt="Питер Демонтаж"></a>
+              <div><a title="На главную" href="/"><img src="images/logo.jpg" alt="Питер Демонтаж"></a>
               </div>
             </div>
           </div>
