--- a/garbage.html
+++ b/garbage.html
@@ -530,9 +530,9 @@
                             <td colspan="4">Тип транспорта: КУЗОВ<br>Объём - 1 куб, грузоподъёмность - 500 кг.</td>
                           </tr>
                           <tr>
-                            <td colspan="2"><img src="/images/vivoz-musora/photo/kuzov.png" alt="" width="250"
+                            <td colspan="2"><img src="./images/vivoz-musora/photo/kuzov.png" alt="" width="250"
                                 height="133"></td>
-                            <td colspan="2"><img src="/images/vivoz-musora/cub/1m3.png" alt="" width="250" height="133">
+                            <td colspan="2"><img src="./images/vivoz-musora/cub/1m3.png" alt="" width="250" height="133">
                             </td>
                           </tr>
                           <tr>
@@ -585,9 +585,9 @@
                             </td>
                           </tr>
                           <tr>
-                            <td colspan="2"><img src="/images/vivoz-musora/photo/kuzov.png" alt="" width="250"
+                            <td colspan="2"><img src="./images/vivoz-musora/photo/kuzov.png" alt="" width="250"
                                 height="133"></td>
-                            <td colspan="2"><img src="/images/vivoz-musora/cub/6m3.png" alt="" width="250" height="133">
+                            <td colspan="2"><img src="./images/vivoz-musora/cub/6m3.png" alt="" width="250" height="133">
                             </td>
                           </tr>
                           <tr>
@@ -641,9 +641,9 @@
                             </td>
                           </tr>
                           <tr>
-                            <td colspan="2"><img src="/images/vivoz-musora/photo/kuzov.png" alt="" width="250"
+                            <td colspan="2"><img src="./images/vivoz-musora/photo/kuzov.png" alt="" width="250"
                                 height="133"></td>
-                            <td colspan="2"><img src="/images/vivoz-musora/cub/9m3.png" alt="" width="250" height="133">
+                            <td colspan="2"><img src="./images/vivoz-musora/cub/9m3.png" alt="" width="250" height="133">
                             </td>
                           </tr>
                           <tr class="title-hide">
@@ -688,9 +688,9 @@
                             </td>
                           </tr>
                           <tr>
-                            <td colspan="2"><img src="/images/vivoz-musora/photo/kuzov.png" alt="" width="250"
+                            <td colspan="2"><img src="./images/vivoz-musora/photo/kuzov.png" alt="" width="250"
                                 height="133"></td>
-                            <td colspan="2"><img src="/images/vivoz-musora/cub/12m3.png" alt="" width="250"
+                            <td colspan="2"><img src="./images/vivoz-musora/cub/12m3.png" alt="" width="250"
                                 height="133"></td>
                           </tr>
                           <tr class="title-hide">
@@ -737,9 +737,9 @@
                             </td>
                           </tr>
                           <tr>
-                            <td colspan="2"><img src="/images/vivoz-musora/photo/bkuzov.png" alt="" width="250"
+                            <td colspan="2"><img src="./images/vivoz-musora/photo/bkuzov.png" alt="" width="250"
                                 height="133"></td>
-                            <td colspan="2"><img src="/images/vivoz-musora/cub/12m3-2.png" alt="" width="250"
+                            <td colspan="2"><img src="./images/vivoz-musora/cub/12m3-2.png" alt="" width="250"
                                 height="133"></td>
                           </tr>
                           <tr class="title-hide">
@@ -785,9 +785,9 @@
                             </td>
                           </tr>
                           <tr>
-                            <td colspan="2"><img src="/images/vivoz-musora/photo/puhto12.png" alt="" width="250"
+                            <td colspan="2"><img src="./images/vivoz-musora/photo/puhto12.png" alt="" width="250"
                                 height="133"></td>
-                            <td colspan="2"><img src="/images/vivoz-musora/cub/12m3-4.png" alt="" width="250"
+                            <td colspan="2"><img src="./images/vivoz-musora/cub/12m3-4.png" alt="" width="250"
                                 height="133"></td>
                           </tr>
                           <tr class="title-hide">
@@ -833,9 +833,9 @@
                               кг.</td>
                           </tr>
                           <tr>
-                            <td colspan="2"><img src="/images/vivoz-musora/photo/puhto27.png" alt="" width="250"
+                            <td colspan="2"><img src="./images/vivoz-musora/photo/puhto27.png" alt="" width="250"
                                 height="133"></td>
-                            <td colspan="2"><img src="/images/vivoz-musora/cub/27m3-2.png" alt="" width="250"
+                            <td colspan="2"><img src="./images/vivoz-musora/cub/27m3-2.png" alt="" width="250"
                                 height="133"></td>
                           </tr>
                           <tr class="title-hide">
